# truckinnout-payroll-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
employees/: models.py  serializers.py  urls.py  views.py
employees/migrations/: 0001_initial.py
shared/: models.py  validators.py
shared/auth/: urls.py
shared/utils/: email.py  s3_functions.py
truckinnout_backend/: asgi.py  settings.py  urls.py  wsgi.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_role.py
