[project]
name = "truckinnout-payroll-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.43",
    "dj-database-url>=3.1.0",
    "django>=6.0.2",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-storages>=1.14.6",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djangorestframework-stubs[compatible-mypy]>=3.16.8",
    "drf-yasg>=1.21.14",
    "gunicorn>=25.0.2",
    "mypy>=1.19.1",
    "pillow>=12.1.0",
    "psycopg2-binary>=2.9.11",
    "python-decouple>=3.8",
    "resend>=2.21.0",
    "setuptools>=80.10.2",
    "whitenoise>=6.11.0",
]
